Horizontal scroll fixed

--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -1,5 +1,5 @@
 @mixin container {
-  width: 1209px;
+  width: 1169px;
   margin: auto;
   padding-right: 20px;
   padding-left: 20px;
